fix issue where chart label was not visible in dark mode

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -16,5 +16,9 @@ html {
 }
 
 .ct-label {
-  color: inherit
+  color: inherit;
+}
+
+.theme--dark .ct-label {
+  color: rgba(255, 255, 255, 0.4);
 }
